# RusTok

./: .dockerignore  .env.dev.example  .gitignore  AGENTS.md  CHANGELOG.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Cargo.toml  LANDING_PROPERTY_SCHEMA_FAILURE.md  Makefile  NOTICE  PAGE_BUILDER_CLEANUP_FAILURE.md  PAGE_BUILDER_CURRENT_CLEANUP_FAILURE.md  PLATFORM_INFO_RU.md  README.md  README.ru.md  RUSTOK_MANIFEST.md  RusTok_AI_Voice_Video_SaaS_Presentation.html  TENANT_HARDENING_COMPLETION_FAILURE.md  TENANT_MIGRATION_FAILURE.md  __branch_marker__  ci-cache-cas-patch-trigger  ci-cache-format-placeholder  ci-diagnostics-placeholder  cli-registry.toml  compiler_warnings.md  deny.toml  docker-compose.full-dev.yml  docker-compose.yml  migration-export-output.txt  modules.browser-smoke.toml  modules.toml  modules.toml.example  package-lock.json  package.json  planar.md  rustok-product-remediation-plan.md  typos.toml
apps/admin/: AI_AGENT_RULES.md  CRATE_API.md  Cargo.toml  Dockerfile  README.md  Trunk.toml  build.rs  index.html  input.css  package-lock.json  package.json  tailwind.config.js
apps/admin/docs/: README.md  implementation-plan.md
apps/admin/locales/: en.json  ru.json
apps/admin/scripts/: copy-richtext-assets.mjs  tailwind-build.cmd  tailwind-build.mjs
apps/admin/src/: lib.rs  main.rs
apps/admin/tests/: module_composition_graphql_guard.rs
apps/server/: CRATE_API.md  Cargo.toml  Dockerfile  Dockerfile.release  README.md  build.rs  scheduler.yaml
apps/server/config/: browser-smoke.yaml  development.yaml  production.redis.example.yaml  test.yaml
apps/server/docs/: CACHE_STAMPEDE_PROTECTION.md  CORE_VERIFICATION_PLAN.md  LOCO_FEATURE_SUPPORT.md  README.md  event-transport.md  flex-phase45-migration-guide.md  health.md  implementation-plan.md  library-stack.md  loco-core-integration-plan.md  loco-integration-review.md  module-lifecycle-retry-compensation-runbook.md
apps/server/migration/: Cargo.toml
apps/server/src/: app.rs  auth.rs  error.rs  host.rs  installer_cli.rs  installer_deployment.rs  installer_execution.rs  lib.rs  main.rs  routes.rs  testing.rs
apps/server/tests/: cache_architecture_guard.rs  cache_build_compatibility_guard.rs  cache_legacy_fallback_guard.rs  cache_redis_monitor_architecture_guard.rs  cache_redis_status_architecture_guard.rs  cache_worker_guardrail_architecture_guard.rs  channel_cache_architecture_guard.rs  channel_cache_listener_lag_resolved_value.rs  channel_cache_resolved_value.rs  channel_native_mutation_cache_guard.rs  commerce_fulfillment_transport_guard.rs  commerce_legacy_openapi_contract.rs  commerce_openapi_contract.rs  commerce_order_change_transport_guard.rs  commerce_return_completion_transport_guard.rs  event_bus_runtime_guard.rs  field_definition_cache_generation_guard.rs  field_definition_cache_runtime_guard.rs  generation_store_architecture_guard.rs  library_api_smoke.rs  lifecycle_bypass_guard.rs  locale_cache_architecture_guard.rs  marketplace_cache_architecture_guard.rs  marketplace_family_boundary_guard.rs  marketplace_listing_admin_ffa_guard.rs  marketplace_listing_boundary_guard.rs  marketplace_listing_event_contract_guard.rs  marketplace_listing_lifecycle_event_guard.rs  marketplace_listing_provenance_cutover_guard.rs  marketplace_payout_runtime_source.rs  marketplace_seller_transport_guard.rs  module_lifecycle.rs  module_surface_boundary_guard.rs  multi_tenant_isolation_test.rs  payment_refund_identity_guard.rs  platform_composition_build_service.rs  rate_limit_cache_runtime_guard.rs  rbac_cache_invalidation_architecture_guard.rs  rbac_distributed_cache_invalidation.rs  rbac_migration_registration_guard.rs  (+14 more)
apps/storefront/: AI_AGENT_RULES.md  CRATE_API.md  Cargo.toml  README.md  Trunk.toml  build.rs  index.html  package-lock.json  package.json
apps/storefront/assets/: input.css
apps/storefront/docs/: README.md  implementation-plan.md
apps/storefront/scripts/: tailwind-build.cmd
apps/storefront/src/: lib.rs  main.rs
apps/storefront/static/: app.css
apps/storefront/tests/: pages_menu_layout_slots_contract.rs
crates/fly/: Cargo.toml  README.md
crates/fly-browser/: Cargo.toml
crates/fly-browser/assets/: browser_hardening.js  fly-browser.js
crates/fly-browser/src/: lib.rs
crates/fly-browser/tests/: auto_mount_contract.rs  browser_problem_contract.rs  intent_abort_classification_contract.rs  intent_abort_contract.rs  intent_timeout_contract.rs  lifecycle_contract.rs  pending_intent_contract.rs  response_order_contract.rs
crates/fly-leptos/: Cargo.toml  README.md
crates/fly-leptos/src/: browser_interaction.rs  browser_runtime.rs  lib.rs  root.rs
crates/fly-ui/: Cargo.toml  README.md
crates/fly-ui/src/: capability_policy.rs  command_capability.rs  contribution.rs  contribution_adapter.rs  contribution_factory.rs  contribution_manifest.rs  dnd.rs  error.rs  (+9 more)
crates/leptos-auth/: Cargo.toml  README.md
crates/leptos-graphql/: Cargo.toml  README.md
crates/leptos-ui-routing/: Cargo.toml  README.md
crates/rustok-ai/: Cargo.toml  README.md  rustok-module.toml
crates/rustok-ai-athanor/: Cargo.toml  README.md
crates/rustok-ai-product/: Cargo.toml  README.md
crates/rustok-api/: Cargo.toml  README.md
crates/rustok-build/: Cargo.toml  README.md
crates/rustok-build-publication/: Cargo.toml  README.md
crates/rustok-build-source/: Cargo.toml  README.md
crates/rustok-cache/: Cargo.toml  README.md  rustok-module.toml
crates/rustok-cli/: Cargo.toml  README.md
crates/rustok-cli-core/: Cargo.toml  README.md
crates/rustok-cli-platform/: Cargo.toml  README.md
crates/rustok-cli-registry/: Cargo.toml  README.md
crates/rustok-comments/: Cargo.toml  README.md  rustok-module.toml
crates/rustok-commerce/: CRATE_API.md  Cargo.toml  README.md  rustok-module.toml
crates/rustok-commerce-foundation/: Cargo.toml  README.md
crates/rustok-content/: CRATE_API.md  Cargo.toml  README.md  rustok-module.toml
crates/rustok-content-orchestration/: Cargo.toml  README.md
crates/rustok-distribution/: Cargo.toml  README.md
crates/rustok-email/: Cargo.toml  README.md  rustok-module.toml
(+5832 files in other folders)
