[workspace]
resolver = "2"
members = [
    "apps/server",
    "apps/admin",
    "apps/storefront",
    "crates/rustok-seo/admin",
    "crates/rustok-seo/render",
    "crates/rustok-blog/admin",
    "crates/rustok-ai/admin",
    "crates/rustok-mcp/admin",
    "crates/rustok-comments/admin",
    "crates/rustok-blog/storefront",
    "crates/rustok-commerce/admin",
    "crates/rustok-commerce/storefront",
    "crates/rustok-cart/storefront",
    "crates/rustok-payment/storefront",
    "crates/rustok-fulfillment/admin",
    "crates/rustok-fulfillment/storefront",
    "crates/rustok-inventory/admin",
    "crates/rustok-product/admin",
    "crates/rustok-product/storefront",
    "crates/rustok-customer/admin",
    "crates/rustok-region/admin",
    "crates/rustok-region/storefront",
    "crates/rustok-order/admin",
    "crates/rustok-order/storefront",
    "crates/rustok-pricing/admin",
    "crates/rustok-pricing/storefront",
    "crates/rustok-channel/admin",
    "crates/rustok-index/admin",
    "crates/rustok-media/admin",
    "crates/rustok-media/cli",
    "crates/rustok-profiles/cli",
    "crates/rustok-auth/cli",
    "crates/rustok-rbac/cli",
    "crates/rustok-outbox/admin",
    "crates/rustok-forum/admin",
    "crates/rustok-forum/storefront",
    "crates/rustok-pages/admin",
    "crates/rustok-pages/storefront",
    "crates/rustok-page-builder/admin",
    "crates/rustok-search/admin",
    "crates/rustok-search/storefront",
    "crates/rustok-tenant/admin",
    "crates/rustok-auth/admin",
    "crates/rustok-rbac/admin",
    "crates/rustok-workflow/admin",
    "crates/rustok-marketplace-seller/admin",
    "crates/rustok-marketplace-listing/admin",
    "crates/*",
    "tests/e2e-rust",
    "UI/leptos",
    "ops/benches",
    "xtask",
]

[patch.crates-io]
utoipa-swagger-ui-vendored = { path = "crates/utoipa-swagger-ui-vendored" }
leptos-shadcn-pagination = { path = "crates/leptos-shadcn-pagination" }

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
license = "BUSL-1.1"
description = "High-performance, modular headless CMS and e-commerce platform built with Rust"
repository = "https://github.com/RusTokRs/RusTok"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.52", features = ["full"] }

# Web
axum = { version = "0.8.9", features = ["multipart", "ws"] }
tower = "0.5"
tower-http = { version = "0.7.0", features = ["cors", "fs"] }
tonic = "0.14.5"
tonic-prost = "0.14.5"
tonic-prost-build = "0.14.5"
protoc-bin-vendored = "3.2"
prost = "0.14.3"

# Database
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
] }
sea-orm-migration = { version = "1.1", default-features = false, features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite"] }

# GraphQL
async-graphql = { version = "7.2.1", features = ["uuid", "chrono"] }
async-graphql-value = "7.2.1"
base64 = "0.22"

# IDs
uuid = { version = "1.23.3", features = ["v4", "serde", "js"] }
ulid = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "2.0"
serde_yaml = "0.9"
toml = "1.0.7"
postcard = { version = "1", default-features = false, features = ["use-std"] }
csv = "1.3"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Error Handling
thiserror = "2.0.18"
anyhow = "1.0"

# Benchmarking
criterion = { version = "0.8", features = ["html_reports"] }

# Property-based testing
proptest = "1.11"
playwright-rs = "0.14"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Text Processing
unicode-normalization = "0.1"

# Leptos
leptos = "0.8.19"
leptos_axum = "0.8.9"
leptos_router = "0.8.13"
leptos-auth = { path = "crates/leptos-auth", default-features = false }
iu-leptos = { path = "UI/leptos" }
leptos-ui = { path = "crates/leptos-ui" }
leptos-forms = { path = "crates/leptos-forms" }
leptos-hook-form = { path = "crates/leptos-hook-form" }
leptos-table = { path = "crates/leptos-table" }
leptos-zod = { path = "crates/leptos-zod" }
leptos-struct-table = "0.19.0"
leptos-zustand = { path = "crates/leptos-zustand" }
leptos-shadcn-pagination = { path = "crates/leptos-shadcn-pagination" }
leptos-use = "0.19.0"
leptos_i18n = { version = "0.6.1" }
leptos_i18n_build = { version = "0.6.1", features = ["pretty_print"] }
leptos-next-metadata = "1.5.0"
leptos_query = "0.5.3"
leptos-chartistry = "0.2"
gloo-storage = "0.4.0"
serde_urlencoded = "0.7.1"
chrono-humanize = "0.2.3"

# Logging & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
futures-util = "0.3"
aws-config = "1.8"
aws-sdk-secretsmanager = { version = "1.109", default-features = false, features = ["behavior-version-latest", "default-https-client", "rt-tokio"] }
azure_identity = "1.0"
azure_core = "1.1"
azure_security_keyvault_secrets = "1.0"
google-cloud-secretmanager-v1 = "1.10"

# OpenTelemetry
# NOTE: tracing-opentelemetry 0.32.x is coupled with opentelemetry 0.31.x.
# Keep this quartet aligned until upstream crates move to the same major/minor line.
opentelemetry = "0.32"
opentelemetry-otlp = "0.32.0"
tracing-opentelemetry = "0.33.0"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
rust_decimal = "1.42"
utoipa = "5.5"
utoipa-swagger-ui = { version = "7.0", features = ["vendored"] }
moka = { version = "0.12", features = ["future"] }
rhai = "1.25.0"
argon2 = "0.5"
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }
rand = "0.10.1"
password-hash = "0.6"
sha2 = "0.11"
wasmparser = "0.253"
wit-parser = "0.251"
oci-distribution = "0.11.0"
once_cell = "1.21"
hex = "0.4"
iggy = "0.10.0"
reqwest = { version = "0.13", features = ["json", "query", "form"] }
url = "2.5"
reqwest-middleware = "0.3.3"
reqwest-retry = "0.5.0"
prometheus = "0.14"
lazy_static = "1.5"
secrecy = { version = "0.10", features = ["serde"] }
rig = { package = "rig-core", version = "=0.40.0", features = ["audio", "image", "rmcp"] }
rig-bedrock = "=0.40.0"
rig-fastembed = "=0.40.0"
rig-gemini-grpc = "=0.40.0"
rig-vertexai = "=0.40.0"

# Internal crates
rustok-core = { path = "crates/rustok-core" }
rustok-modules = { path = "crates/rustok-modules" }
rustok-events = { path = "crates/rustok-events" }
rustok-commerce-foundation = { path = "crates/rustok-commerce-foundation" }
rustok-commerce = { path = "crates/rustok-commerce" }
rustok-marketplace = { path = "crates/rustok-marketplace" }
rustok-marketplace-seller = { path = "crates/rustok-marketplace-seller" }
rustok-marketplace-seller-admin = { path = "crates/rustok-marketplace-seller/admin" }
rustok-marketplace-listing = { path = "crates/rustok-marketplace-listing" }
rustok-marketplace-listing-admin = { path = "crates/rustok-marketplace-listing/admin" }
rustok-cart = { path = "crates/rustok-cart" }
rustok-cart-storefront = { path = "crates/rustok-cart/storefront" }
rustok-customer = { path = "crates/rustok-customer" }
rustok-product = { path = "crates/rustok-product" }
rustok-profiles = { path = "crates/rustok-profiles" }
rustok-comments = { path = "crates/rustok-comments", default-features = false }
rustok-region = { path = "crates/rustok-region" }
rustok-pricing = { path = "crates/rustok-pricing" }
rustok-tax = { path = "crates/rustok-tax" }
rustok-inventory = { path = "crates/rustok-inventory" }
rustok-order = { path = "crates/rustok-order" }
rustok-order-storefront = { path = "crates/rustok-order/storefront" }
rustok-payment = { path = "crates/rustok-payment" }
rustok-payment-storefront = { path = "crates/rustok-payment/storefront" }
rustok-fulfillment = { path = "crates/rustok-fulfillment" }
rustok-fulfillment-storefront = { path = "crates/rustok-fulfillment/storefront" }
rustok-blog = { path = "crates/rustok-blog" }
rustok-content = { path = "crates/rustok-content" }
rustok-content-orchestration = { path = "crates/rustok-content-orchestration" }
rustok-pages = { path = "crates/rustok-pages" }
rustok-page-builder = { path = "crates/rustok-page-builder" }
rustok-taxonomy = { path = "crates/rustok-taxonomy" }
rustok-index = { path = "crates/rustok-index" }
rustok-search = { path = "crates/rustok-search" }
rustok-seo = { path = "crates/rustok-seo" }
rustok-seo-targets = { path = "crates/rustok-seo-targets" }
rustok-seo-render = { path = "crates/rustok-seo/render" }
rustok-seo-admin-support = { path = "crates/rustok-seo-admin-support" }
rustok-auth = { path = "crates/rustok-auth" }
rustok-api = { path = "crates/rustok-api", default-features = false }
rustok-runtime = { path = "crates/rustok-runtime" }
rustok-sandbox = { path = "crates/rustok-sandbox" }
rustok-web = { path = "crates/rustok-web" }
rustok-fba = { path = "crates/rustok-fba" }
rustok-cli-core = { path = "crates/rustok-cli-core" }
rustok-cli-registry = { path = "crates/rustok-cli-registry" }
rustok-cli-platform = { path = "crates/rustok-cli-platform" }
rustok-distribution = { path = "crates/rustok-distribution", default-features = false }
rustok-migrations = { path = "crates/rustok-migrations" }
rustok-installer = { path = "crates/rustok-installer" }
rustok-installer-persistence = { path = "crates/rustok-installer-persistence" }
rustok-installer-cli = { path = "crates/rustok-installer-cli" }
rustok-build = { path = "crates/rustok-build" }
rustok-module-build-transport = { path = "crates/rustok-module-build-transport" }
rustok-module-build-worker = { path = "crates/rustok-module-build-worker" }
rustok-worker-transport = { path = "crates/rustok-worker-transport" }
rustok-graphql = { path = "crates/rustok-graphql" }
rustok-graphql-leptos = { path = "crates/rustok-graphql-leptos" }
rustok-ui-core = { path = "crates/rustok-ui-core" }
rustok-ui-i18n = { path = "crates/rustok-ui-i18n" }
rustok-ui-i18n-leptos = { path = "crates/rustok-ui-i18n-leptos" }
rustok-ui-transport = { path = "crates/rustok-ui-transport" }
leptos-ui-routing = { path = "crates/leptos-ui-routing" }
rustok-cache = { path = "crates/rustok-cache" }
rustok-channel = { path = "crates/rustok-channel" }
rustok-email = { path = "crates/rustok-email" }
rustok-outbox = { path = "crates/rustok-outbox" }
rustok-iggy = { path = "crates/rustok-iggy" }
rustok-iggy-connector = { path = "crates/rustok-iggy-connector" }
rustok-forum = { path = "crates/rustok-forum" }
rustok-tenant = { path = "crates/rustok-tenant" }
rustok-rbac = { path = "crates/rustok-rbac" }
rustok-mcp = { path = "crates/rustok-mcp" }
rustok-ai = { path = "crates/rustok-ai" }
rustok-ai-content = { path = "crates/rustok-ai-content" }
rustok-ai-order = { path = "crates/rustok-ai-order" }
rustok-ai-product = { path = "crates/rustok-ai-product" }
rustok-ai-media = { path = "crates/rustok-ai-media" }
rustok-ai-alloy = { path = "crates/rustok-ai-alloy" }
athanor-app = { git = "https://github.com/RusTokRs/Athanor.git", rev = "67d0bdae5439f510a52105a7af964a508895ff1b" }
athanor-core = { git = "https://github.com/RusTokRs/Athanor.git", rev = "67d0bdae5439f510a52105a7af964a508895ff1b" }
athanor-domain = { git = "https://github.com/RusTokRs/Athanor.git", rev = "67d0bdae5439f510a52105a7af964a508895ff1b" }
athanor-runtime-defaults = { git = "https://github.com/RusTokRs/Athanor.git", rev = "67d0bdae5439f510a52105a7af964a508895ff1b" }
rustok-telemetry = { path = "crates/rustok-telemetry" }
rustok-test-utils = { path = "crates/rustok-test-utils" }
rustok-storage = { path = "crates/rustok-storage" }
rustok-secrets = { path = "crates/rustok-secrets" }
rustok-media = { path = "crates/rustok-media" }
rustok-media-cli = { path = "crates/rustok-media/cli" }
rustok-profiles-cli = { path = "crates/rustok-profiles/cli" }
rustok-auth-cli = { path = "crates/rustok-auth/cli" }
rustok-rbac-cli = { path = "crates/rustok-rbac/cli" }
flex = { path = "crates/flex" }
alloy = { path = "crates/alloy" }
rustok-workflow = { path = "crates/rustok-workflow" }
schemars = "1.2"
