[package]
name = "rustok-admin"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["csr"]
csr = ["leptos/csr", "leptos_i18n/csr"]
hydrate = ["leptos/hydrate", "leptos_i18n/hydrate"]
ssr = [
  "leptos/ssr",
  "leptos_i18n/ssr",
  "dep:leptos_axum",
  "dep:loco-rs",
  "dep:sea-orm",
  "dep:rustok-cache",
  "dep:rustok-core",
  "dep:rustok-tenant",
  "dep:rustok-workflow",
  "dep:toml",
]

[dependencies]
leptos = { workspace = true, features = ["csr"] }
leptos_router = { workspace = true }
leptos_axum = { workspace = true, optional = true }
leptos-auth = { workspace = true }
leptos-graphql = { workspace = true }
leptos-ui = { workspace = true }
leptos-forms = { workspace = true }
leptos-hook-form = { workspace = true }
leptos-zod = { workspace = true }
leptos-struct-table = { workspace = true }
leptos-zustand = { workspace = true }
leptos-shadcn-pagination = { workspace = true }
leptos-use = { workspace = true }
leptos_i18n = { workspace = true, features = ["csr"] }
leptos-next-metadata = { workspace = true }
leptos_query = { workspace = true }
leptos-chartistry = { workspace = true }
gloo-storage = { workspace = true }
serde_urlencoded = { workspace = true }
chrono-humanize = { workspace = true }
chrono = { workspace = true }
console_error_panic_hook = "0.1"
console_log = "1"
log = "0.4"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["json"] }
thiserror = { workspace = true }
uuid = { workspace = true }
sea-orm = { workspace = true, optional = true }
base64 = { workspace = true }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["CloseEvent", "ErrorEvent", "Event", "MessageEvent", "Storage", "WebSocket", "Window"] }
rustok-api.workspace = true
loco-rs = { workspace = true, optional = true }
rustok-cache = { workspace = true, optional = true }
rustok-core = { workspace = true, optional = true }
rustok-tenant = { workspace = true, optional = true }
rustok-workflow = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
rustok-blog-admin = { path = "../../crates/rustok-blog/admin" }
rustok-channel-admin = { path = "../../crates/rustok-channel/admin" }
rustok-commerce-admin = { path = "../../crates/rustok-commerce/admin" }
rustok-forum-admin = { path = "../../crates/rustok-forum/admin" }
rustok-pages-admin = { path = "../../crates/rustok-pages/admin" }
rustok-search-admin = { path = "../../crates/rustok-search/admin" }
rustok-workflow-admin = { path = "../../crates/rustok-workflow/admin" }

[build-dependencies]
leptos_i18n_build = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }

[package.metadata.cargo-udeps.ignore]
normal = [
  "leptos-auth",
  "leptos_axum",
  "leptos-graphql",
  "leptos-hook-form",
  "leptos-struct-table",
  "leptos-zod",
  "leptos-zustand",
  "leptos-shadcn-pagination",
  "leptos-use",
  "leptos_i18n",
  "leptos-next-metadata",
  "leptos_query",
  "leptos-chartistry",
  "gloo-storage",
  "serde_urlencoded",
  "chrono-humanize",
  "chrono",
  "toml",
  "leptos-forms",
  "uuid",
  "rustok-api",
  "rustok-cache",
  "rustok-core",
  "rustok-tenant",
  "rustok-workflow",
  "rustok-blog-admin",
  "rustok-channel-admin",
  "rustok-commerce-admin",
  "rustok-forum-admin",
  "rustok-pages-admin",
  "rustok-search-admin",
  "rustok-workflow-admin",
]
