[package]
name = "rustok-admin"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rustok-admin"
path = "src/main.rs"
test = false
bench = false
doc = false

[features]
default = ["ssr"]
csr = [
  "leptos/csr",
  "leptos_i18n/csr",
  "dep:wasm-bindgen",
  "dep:web-sys",
  "dep:console_error_panic_hook",
  "dep:console_log",
  "rustok-mcp-admin/csr",
  "rustok-pages-admin/csr",
  "rustok-workflow-admin/csr",
  "rustok-auth-admin/csr",
  "rustok-page-builder-admin/csr",
]
hydrate = [
  "leptos/hydrate",
  "leptos_i18n/hydrate",
  "dep:wasm-bindgen",
  "dep:web-sys",
  "dep:console_error_panic_hook",
  "dep:console_log",
  "leptos-auth/hydrate",
  "rustok-ai-admin/hydrate",
  "rustok-channel-admin/hydrate",
  "rustok-comments-admin/hydrate",
  "rustok-commerce-admin/hydrate",
  "rustok-customer-admin/hydrate",
  "rustok-region-admin/hydrate",
  "rustok-index-admin/hydrate",
  "rustok-marketplace-seller-admin/hydrate",
  "rustok-marketplace-listing-admin/hydrate",
  "rustok-media-admin/hydrate",
  "rustok-mcp-admin/hydrate",
  "rustok-outbox-admin/hydrate",
  "rustok-page-builder-admin/hydrate",
  "rustok-pages-admin/hydrate",
  "rustok-seo-admin/hydrate",
  "rustok-fulfillment-admin/hydrate",
  "rustok-inventory-admin/hydrate",
  "rustok-order-admin/hydrate",
  "rustok-pricing-admin/hydrate",
  "rustok-product-admin/hydrate",
  "rustok-rbac-admin/hydrate",
  "rustok-search-admin/hydrate",
  "rustok-tenant-admin/hydrate",
  "rustok-workflow-admin/hydrate",
  "rustok-auth-admin/hydrate",
]
ssr = [
  "leptos/ssr",
  "leptos_router/ssr",
  "leptos_i18n/ssr",
  "dep:axum",
  "dep:tokio",
  "dep:leptos_axum",
  "dep:sea-orm",
  "dep:rustok-cache",
  "dep:rustok-comments",
  "rustok-comments/server",
  "dep:rustok-core",
  "dep:rustok-media",
  "dep:rustok-seo",
  "dep:rustok-rbac",
  "dep:rustok-search",
  "dep:rustok-storage",
  "dep:rustok-tenant",
  "dep:rustok-web",
  "dep:rustok-workflow",
  "dep:toml",
  "leptos-auth/ssr",
  "rustok-ai-admin/ssr",
  "rustok-channel-admin/ssr",
  "rustok-comments-admin/ssr",
  "rustok-commerce-admin/ssr",
  "rustok-customer-admin/ssr",
  "rustok-region-admin/ssr",
  "rustok-index-admin/ssr",
  "rustok-marketplace-seller-admin/ssr",
  "rustok-marketplace-listing-admin/ssr",
  "rustok-media-admin/ssr",
  "rustok-mcp-admin/ssr",
  "rustok-outbox-admin/ssr",
  "rustok-page-builder-admin/ssr",
  "rustok-pages-admin/ssr",
  "rustok-seo-admin/ssr",
  "rustok-fulfillment-admin/ssr",
  "rustok-inventory-admin/ssr",
  "rustok-order-admin/ssr",
  "rustok-pricing-admin/ssr",
  "rustok-product-admin/ssr",
  "rustok-rbac-admin/ssr",
  "rustok-search-admin/ssr",
  "rustok-tenant-admin/ssr",
  "rustok-workflow-admin/ssr",
  "rustok-auth-admin/ssr",
]

[dependencies]
axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
rustok-ui-core.workspace = true
rustok-ui-transport.workspace = true
leptos.workspace = true
leptos_router = { workspace = true }
leptos_axum = { workspace = true, optional = true }
leptos-auth = { workspace = true, default-features = false }
rustok-graphql = { workspace = true }
leptos-ui-routing = { workspace = true }
leptos-ui = { workspace = true }
leptos-forms = { workspace = true }
leptos-hook-form = { workspace = true }
leptos-zod = { workspace = true }
leptos-struct-table = { workspace = true }
leptos-zustand = { workspace = true }
leptos-shadcn-pagination = { workspace = true }
leptos-use = { workspace = true }
leptos_i18n.workspace = true
leptos_query = { workspace = true }
leptos-chartistry = { workspace = true }
serde_urlencoded = { workspace = true }
chrono = { workspace = true }
console_error_panic_hook = { version = "0.1", optional = true }
console_log = { version = "1", optional = true }
log = "0.4"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["json"] }
thiserror = { workspace = true }
uuid = { workspace = true }
sea-orm = { workspace = true, optional = true }
base64 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Clipboard", "CloseEvent", "ErrorEvent", "Event", "MessageEvent", "Navigator", "Storage", "WebSocket", "Window"] }
rustok-api = { path = "../../crates/rustok-api", default-features = false }
rustok-installer = { path = "../../crates/rustok-installer" }
rustok-cache = { workspace = true, optional = true }
rustok-comments = { workspace = true, optional = true }
rustok-core = { workspace = true, optional = true }
rustok-media = { workspace = true, optional = true }
rustok-seo = { workspace = true, optional = true }
rustok-rbac = { workspace = true, optional = true }
rustok-search = { workspace = true, optional = true }
rustok-storage = { workspace = true, optional = true }
rustok-tenant = { workspace = true, optional = true }
rustok-web = { workspace = true, optional = true }
rustok-workflow = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
rustok-blog-admin = { path = "../../crates/rustok-blog/admin", default-features = false }
rustok-ai-admin = { path = "../../crates/rustok-ai/admin", default-features = false }
rustok-channel-admin = { path = "../../crates/rustok-channel/admin", default-features = false }
rustok-comments-admin = { path = "../../crates/rustok-comments/admin", default-features = false }
rustok-commerce-admin = { path = "../../crates/rustok-commerce/admin", default-features = false }
rustok-customer-admin = { path = "../../crates/rustok-customer/admin", default-features = false }
rustok-fulfillment-admin = { path = "../../crates/rustok-fulfillment/admin", default-features = false }
rustok-forum-admin = { path = "../../crates/rustok-forum/admin", default-features = false }
rustok-index-admin = { path = "../../crates/rustok-index/admin", default-features = false }
rustok-inventory-admin = { path = "../../crates/rustok-inventory/admin", default-features = false }
rustok-marketplace-seller-admin = { path = "../../crates/rustok-marketplace-seller/admin", default-features = false }
rustok-marketplace-listing-admin = { path = "../../crates/rustok-marketplace-listing/admin", default-features = false }
rustok-media-admin = { path = "../../crates/rustok-media/admin", default-features = false }
rustok-mcp-admin = { path = "../../crates/rustok-mcp/admin", default-features = false }
rustok-order-admin = { path = "../../crates/rustok-order/admin", default-features = false }
rustok-outbox-admin = { path = "../../crates/rustok-outbox/admin", default-features = false }
rustok-page-builder-admin = { path = "../../crates/rustok-page-builder/admin", default-features = false }
rustok-pages-admin = { path = "../../crates/rustok-pages/admin", default-features = false }
rustok-pricing-admin = { path = "../../crates/rustok-pricing/admin", default-features = false }
rustok-product-admin = { path = "../../crates/rustok-product/admin", default-features = false }
rustok-region-admin = { path = "../../crates/rustok-region/admin", default-features = false }
rustok-rbac-admin = { path = "../../crates/rustok-rbac/admin", default-features = false }
rustok-search-admin = { path = "../../crates/rustok-search/admin", default-features = false }
rustok-seo-admin = { path = "../../crates/rustok-seo/admin", default-features = false }
rustok-tenant-admin = { path = "../../crates/rustok-tenant/admin", default-features = false }
rustok-workflow-admin = { path = "../../crates/rustok-workflow/admin", default-features = false }
rustok-auth-admin = { path = "../../crates/rustok-auth/admin", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-storage = { workspace = true }

[dev-dependencies]
tower.workspace = true

[build-dependencies]
leptos_i18n_build = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }

[package.metadata.leptos]
output-name = "rustok-admin"
site-root = "target/site"
site-pkg-dir = "pkg"
site-addr = "127.0.0.1:3001"
reload-port = 3002
bin-features = ["ssr"]
bin-default-features = false
bin-cargo-args = ["--locked"]
lib-features = ["hydrate"]
lib-default-features = false
lib-cargo-args = ["--locked"]

[package.metadata.cargo-udeps.ignore]
normal = [
  "leptos-auth",
  "leptos_axum",
  "rustok-graphql",
  "leptos-hook-form",
  "leptos-struct-table",
  "leptos-zod",
  "leptos-zustand",
  "leptos-shadcn-pagination",
  "leptos-use",
  "leptos_i18n",
  "leptos_query",
  "leptos-chartistry",
  "gloo-storage",
  "serde_urlencoded",
  "chrono",
  "toml",
  "leptos-forms",
  "uuid",
  "rustok-api",
  "rustok-ui-transport",
  "rustok-installer",
  "rustok-cache",
  "rustok-comments",
  "rustok-comments-admin",
  "rustok-customer-admin",
  "rustok-core",
  "rustok-marketplace-seller-admin",
  "rustok-marketplace-listing-admin",
  "rustok-media",
  "rustok-media-admin",
  "rustok-mcp-admin",
  "rustok-page-builder-admin",
  "rustok-pages-admin",
  "rustok-seo",
  "rustok-seo-admin",
  "rustok-order-admin",
  "rustok-region-admin",
  "rustok-tenant",
  "rustok-storage",
  "rustok-product-admin",
  "rustok-workflow",
  "rustok-blog-admin",
  "rustok-ai-admin",
  "rustok-channel-admin",
  "rustok-commerce-admin",
  "rustok-fulfillment-admin",
  "rustok-forum-admin",
  "rustok-index-admin",
  "rustok-inventory-admin",
  "rustok-outbox-admin",
  "rustok-pricing-admin",
  "rustok-rbac",
  "rustok-rbac-admin",
  "rustok-search-admin",
  "rustok-tenant-admin",
  "rustok-workflow-admin",
  "rustok-auth-admin",
]
