[package]
name = "rustok-server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = [
    "mod-auth",
    "mod-tenant",
    "mod-multilingual",
    "mod-users",
    "mod-media",
    "mod-pages",
    "mod-blog",
    "mod-seo",
    "mod-rbac",
    "mod-webhooks",
    "mod-audit",
    "mod-search",
    "mod-scheduler",
    "mod-notifications",
    "mod-workflow",
    "mod-alloy",
    "mod-taxonomy",
    "mod-forum",
    "mod-moderation",
    "mod-messaging",
    "mod-reactions",
    "mod-activity-feed",
    "mod-commerce",
    "mod-cart",
    "mod-orders",
    "mod-payments",
    "mod-fulfillment",
    "mod-promotions",
    "mod-pricing",
    "mod-inventory",
    "mod-customer-accounts",
    "mod-tax",
    "mod-returns",
]
# Embed admin frontend assets into the server binary and expose /admin/*.
embed-admin = ["dep:rust-embed", "tower-http/fs"]
# Embed storefront frontend assets into the server binary and expose /*.
embed-storefront = ["dep:rust-embed", "tower-http/fs"]
mod-auth = ["dep:rustok-auth"]
mod-tenant = ["dep:rustok-tenant"]
mod-multilingual = ["dep:rustok-multilingual"]
mod-users = ["dep:rustok-users"]
mod-media = ["dep:rustok-media"]
mod-pages = ["dep:rustok-pages"]
mod-blog = ["dep:rustok-blog"]
mod-seo = ["dep:rustok-seo"]
mod-rbac = ["dep:rustok-rbac"]
mod-webhooks = ["dep:rustok-webhooks"]
mod-audit = ["dep:rustok-audit"]
mod-search = ["dep:rustok-search"]
mod-scheduler = ["dep:rustok-scheduler"]
mod-notifications = ["dep:rustok-notifications"]
mod-workflow = ["dep:rustok-workflow"]
mod-alloy = ["dep:alloy"]
mod-taxonomy = ["dep:rustok-taxonomy"]
mod-forum = ["dep:rustok-forum"]
mod-moderation = ["dep:rustok-moderation"]
mod-messaging = ["dep:rustok-messaging"]
mod-reactions = ["dep:rustok-reactions"]
mod-activity-feed = ["dep:rustok-activity-feed"]
mod-commerce = ["dep:rustok-commerce"]
mod-cart = ["dep:rustok-cart"]
mod-orders = ["dep:rustok-orders"]
mod-payments = ["dep:rustok-payments"]
mod-fulfillment = ["dep:rustok-fulfillment"]
mod-promotions = ["dep:rustok-promotions"]
mod-pricing = ["dep:rustok-pricing"]
mod-inventory = ["dep:rustok-inventory"]
mod-customer-accounts = ["dep:rustok-customer-accounts"]
mod-tax = ["dep:rustok-tax"]
mod-returns = ["dep:rustok-returns"]

[dependencies]
rustok-api.workspace = true
rustok-core.workspace = true
rustok-cache.workspace = true
rustok-build.workspace = true
rustok-test-utils.workspace = true
rustok-graphql = { path = "../../crates/rustok-graphql" }
rustok-content-orchestration = { path = "../../crates/rustok-content-orchestration" }
rustok-auth = { path = "../../crates/rustok-auth", optional = true }
rustok-tenant = { path = "../../crates/rustok-tenant", optional = true }
rustok-multilingual = { path = "../../crates/rustok-multilingual", optional = true }
rustok-users = { path = "../../crates/rustok-users", optional = true }
rustok-media = { path = "../../crates/rustok-media", optional = true }
rustok-pages = { path = "../../crates/rustok-pages", optional = true }
rustok-blog = { path = "../../crates/rustok-blog", optional = true }
rustok-seo = { path = "../../crates/rustok-seo", optional = true }
rustok-rbac = { path = "../../crates/rustok-rbac", optional = true }
rustok-webhooks = { path = "../../crates/rustok-webhooks", optional = true }
rustok-audit = { path = "../../crates/rustok-audit", optional = true }
rustok-search = { path = "../../crates/rustok-search", optional = true }
rustok-scheduler = { path = "../../crates/rustok-scheduler", optional = true }
rustok-notifications = { path = "../../crates/rustok-notifications", optional = true }
rustok-workflow = { path = "../../crates/rustok-workflow", optional = true }
alloy = { path = "../../crates/alloy", optional = true }
rustok-taxonomy = { path = "../../crates/rustok-taxonomy", optional = true }
rustok-forum = { path = "../../crates/rustok-forum", optional = true }
rustok-moderation = { path = "../../crates/rustok-moderation", optional = true }
rustok-messaging = { path = "../../crates/rustok-messaging", optional = true }
rustok-reactions = { path = "../../crates/rustok-reactions", optional = true }
rustok-activity-feed = { path = "../../crates/rustok-activity-feed", optional = true }
rustok-commerce = { path = "../../crates/rustok-commerce", optional = true }
rustok-cart = { path = "../../crates/rustok-cart", optional = true }
rustok-orders = { path = "../../crates/rustok-orders", optional = true }
rustok-payments = { path = "../../crates/rustok-payments", optional = true }
rustok-fulfillment = { path = "../../crates/rustok-fulfillment", optional = true }
rustok-promotions = { path = "../../crates/rustok-promotions", optional = true }
rustok-pricing = { path = "../../crates/rustok-pricing", optional = true }
rustok-inventory = { path = "../../crates/rustok-inventory", optional = true }
rustok-customer-accounts = { path = "../../crates/rustok-customer-accounts", optional = true }
rustok-tax = { path = "../../crates/rustok-tax", optional = true }
rustok-returns = { path = "../../crates/rustok-returns", optional = true }
axum.workspace = true
leptos.workspace = true
leptos_axum.workspace = true
axum-extra = { version = "0.12", features = ["typed-header"] }
sea-orm.workspace = true
async-graphql = { workspace = true, features = ["dataloader"] }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tera.workspace = true
toml.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
base64.workspace = true
eyre = "0.6"
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
rust_decimal.workspace = true
argon2.workspace = true
hex.workspace = true
jsonwebtoken.workspace = true
password-hash.workspace = true
rhai-full = { package = "rhai", version = "=1.24.0", features = ["sync", "metadata"] }
sha2.workspace = true
moka = { workspace = true, features = ["future"] }
once_cell.workspace = true
utoipa = { workspace = true, features = ["axum_extras", "uuid", "chrono", "yaml"] }
redis = { version = "1.2", features = ["tokio-comp", "connection-manager"] }
futures-util = "0.3"
rust-embed = { version = "8.0", features = ["interpolate-folder-path"], optional = true }
tower-http = { workspace = true, features = ["fs"] }
mime_guess = "2.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
semver = "1.0"
rand.workspace = true
subtle = "2"
bytes = "1.0"
ipnet = "2.12"
url = "2.5"

# Server migration and schema composition
rustok-migrations = { path = "../../crates/rustok-migrations" }
sea-orm-migration.workspace = true

[dev-dependencies]
serial_test = "3.5"
rustok-test-utils.workspace = true
tempfile = "3.27"
tower.workspace = true
url = "2.5"

[build-dependencies]
serde.workspace = true
toml.workspace = true

[package.metadata.cargo-udeps.ignore]
development = ["serial_test"]
normal = ["rustok-rbac", "rustok-tenant", "password-hash"]
